2021-11-11  Adrian Perez de Castro  <aperez@igalia.com>

        Non-unified build fixes, early November 2021 edition, bis
        https://bugs.webkit.org/show_bug.cgi?id=232998

        Unreviewed non-unified build fixes.

        * pal/graphics/WebGPU/WebGPUColorWrite.h: Add missing wtf/RefCounted.h header.
        * pal/graphics/WebGPU/WebGPUSupportedLimits.h: Add missing wtf/Ref.h header.
        * pal/graphics/WebGPU/WebGPUValidationError.h: Add missing wtf/text/WTFString.h header.

2021-11-10  Jer Noble  <jer.noble@apple.com>

        [iOS] Adopt -[AVAudioSession setAuditTokensForProcessAssertion:]
        https://bugs.webkit.org/show_bug.cgi?id=232909
        <rdar://68184444>

        Reviewed by Eric Carlson.

        * pal/spi/cocoa/AVFoundationSPI.h:

2021-11-09  Myles C. Maxfield  <mmaxfield@apple.com>

        [Cocoa] Migrate from CTFontCopyVariationAxes() to CTFontCopyVariationAxesInternal() if possible
        https://bugs.webkit.org/show_bug.cgi?id=232690

        Reviewed by Simon Fraser and Cameron McCormack.

        * pal/spi/cf/CoreTextSPI.h:

2021-11-09  Devin Rousso  <drousso@apple.com>

        REGRESSION(r271735): PaymentShippingOption.selected ignored
        https://bugs.webkit.org/show_bug.cgi?id=221960
        <rdar://problem/73464404>

        Reviewed by Tim Horton.

        Leverage new `PKShippingMethods` SPI to provide both the general list of `PKShippingMethod`
        and the default selected `PKShippingMethods` when creating/updating a payment request.

        * pal/cocoa/PassKitSoftLink.h:
        * pal/cocoa/PassKitSoftLink.mm:
        * pal/spi/cocoa/PassKitSPI.h:

2021-11-09  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, reverting r285318.
        https://bugs.webkit.org/show_bug.cgi?id=232894

        broke Apple internal build

        Reverted changeset:

        "[Cocoa] Migrate from CTFontCopyVariationAxes() to
        CTFontCopyVariationAxesInternal() if possible"