@@ -1,3 +1,15 @@
+2021-11-12  Wenson Hsieh  <wenson_hsieh@apple.com>
+
+        Stop statically declaring various UIFoundation constants in NSAttributedStringSPI.h
+        https://bugs.webkit.org/show_bug.cgi?id=233064
+        rdar://85341122
+
+        Reviewed by Tim Horton.
+
+        Replace these static NSString definitions with soft-linked constants instead.
+
+        * pal/spi/cocoa/NSAttributedStringSPI.h:
+
 2021-11-11  Adrian Perez de Castro  <aperez@igalia.com>
 
         Non-unified build fixes, early November 2021 edition, bis
